# cm-forms

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
research/: cm-forms-wcag-atomic.rst  implementation.md  why.md
src/cm_forms/: cli.py  core.py
src/cm_forms/fixers/: ambiguous_button_fixer.py  aria_required_fixer.py  base.py  label_fixer.py
